# rpi-pico-ac-control

./: .gitignore  CMakeLists.txt  README.md  config.cmake  home_assistant_configuration.yaml  html_fsdata.py
secrets/: secrets.pass.example  wifi.pass.example
src/: CMakeLists.txt  lwipopts.h  main.c  wifi.h
src/AC/: mitsubishi_heavy.c  mitsubishi_heavy.h  mitsubishi_heavy_values.h
src/IR/: CMakeLists.txt  ir_send.c  ir_send.h  mitsubishi_heavy_ir.c  mitsubishi_heavy_ir.h  mitsubishi_heavy_ir_burst.pio  mitsubishi_heavy_ir_data.pio  mitsubishi_heavy_ir_header.pio
src/ac_control/: mitsubishi_heavy.c  mitsubishi_heavy.h  mitsubishi_heavy_values.h
src/ac_control/ir/: CMakeLists.txt  ir_send.c  ir_send.h  mitsubishi_heavy_152b_protocol.pio  mitsubishi_heavy_ir.c  mitsubishi_heavy_ir.h
src/communication/mqtt/: mqtt.c  mqtt.h
src/communication/web/: frontend.c  frontend.h
src/communication/web/html/: index.shtml  styles.css
src/frontend/: frontend.c  frontend.h
src/frontend/html/: index.shtml  styles.css
src/networking/: wifi.c  wifi.h
